--- a/style.css
+++ b/style.css
@@ -7,7 +7,21 @@ body{
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 8.3333333333333333333333333333333333333333333333333333vh);
 }
-
+/*header*/
+.header {
+	grid-column: 1/13;
+	text-align: center;
+	font-size: 2rem;
+}
+.nav {
+	grid-row: 2/3;
+	grid-column: 3/11;
+	display:flex;
+	justify-content: space-around;
+}
+.nav a {
+	font-size: 1.2rem;
+}
 /*pied de page*/
 
 footer{
@@ -74,24 +88,4 @@ p{
 }
 .s-m a:hover > i{
     transform: scale(1.6) rotate(25deg);
-}
-
-
-/*Fleche scroll*/
-.scrollup {
-	width: 40px;
-	height: 40px;
-	position: fixed;
-	bottom: 50px;
-	right: 50px;
-	display: none;
-	color: white;
-	background-color: #3a3f51;
-	border: 1px solid #3a3f51;
-	font-size: 20px;
-	text-align: center;
-	line-height: 37px;
-}
-.scrollup:hover{
-	color: white;
 }
