--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@ header {
     left: 25px;
     position: fixed;
     text-align: left;
-
+}
+.headerr{
+    grid-column: 1/3;
 }
 
 .titre p {
@@ -67,7 +69,6 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     height: 350px;
-    
 }
 
 .button {
@@ -265,4 +266,3 @@ p{
     margin: 50px;
     text-align: justify;
 }
-
