Différents petits fix
Boutons disposition

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body{
     margin: 0;
-	background-color: rgb(204, 204, 204);
+	background-color: rgb(244, 244, 244);
   font-family: 'PT Sans', 'sans-serif';
     background-image: url('');
 }
@@ -206,8 +206,10 @@ p{
 .fleche-droite {
     color: #606060;
     position: absolute;
+    width: 20px;
+    height: 50px;
     top: 50%;
-    font-size: 2em;
+    font-size: 50px;
     display: flex;
     justify-content: space-between;
     transform: translateY(-50%);
@@ -232,6 +234,13 @@ p{
     color: rgb(210, 210, 210);
     font-size: 80%;
     
+}
+.fleche{
+    padding-top: 11px;
+    font-size: 30px;
+}
+.fleche:hover{
+    color: #ffffff;
 }
   
 .slide .en-savoir-plus {
