--- a/style.css
+++ b/style.css
@@ -81,11 +81,8 @@ footer{
 	display: fix;
 	justify-content: center;
 
-	grid-column: 3 / span 10;
+	grid-column: 3 / span 9;
 	grid-row: 11 / span 2;
-
-	border-top:0.1em solid black;
-	width:80%;
 }
 
 p{
@@ -113,9 +110,10 @@ p{
 }
 
 .mention a{
-	padding: 0.5em;
+	padding: 0.3em;
     color: black;
     text-decoration: none;
+    font-size:0.9em;
 
 }
 
@@ -125,41 +123,12 @@ p{
 }
 
 .mention{
-    margin-bottom: 0.5em;
+    margin-bottom: 0.2em;
 }
 
 .info {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 10px;
-}
-
-/* logo réseaux sociaux */
-
-.s-m{
-    position: relative;
-
-}
-.s-m a{
-    display: inline-flex;
-    width: 30px;
-    height: 30px;
-    background: black;
-    color: aliceblue;
-    border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    transition: 0.4s;
-    font-size: 24px;
-}
-.s-m a:hover{
-    background: grey;
-
-}
-.s-m a i{
-    transition: 0.4s all;
-}
-.s-m a:hover > i{
-    transform: scale(1.6) rotate(25deg);
 }
 
 /* Slider */
@@ -251,17 +220,25 @@ p{
 /* description */
 
 .description {
-    grid-column: 4 / 10;
+    margin-top: 70px;
+    grid-column: 3 / 10;
     height: 100vh;
-}
-.para1 {
-    grid-column: 4 / 10;
-    margin: 50x;
-    text-align: justify;
+    text-align: left;
 }
 
-.para2 {
-    grid-column: 4 / 10;
-    margin: 50px;
-    text-align: justify;
+.titre_desc {
+    font-size: 40px;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.para1 p {
+    font-size: 15px;
+    text-align: left;
+    margin-bottom: 50px;
+}
+
+.para2 p {
+    font-size: 15px;
+    text-align: left;
 }
