--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ p{
 }
 
 .info a:hover{
-    color:white;
+    color:red;
     transition: color 0.5s ease;
 }
 
@@ -118,7 +118,7 @@ p{
 }
 
 .mention a:hover{
-    color: white;
+    color: red;
     transition: color 0.5s ease;
 }
 
