--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ header {
 .titre .logo a{
     text-decoration: none;  
     color: black;
+    display: block;
 }
 .titre a{
     text-align: center;
@@ -138,10 +139,10 @@ p{
 
 #slider {
     position: relative;
-	grid-column: 3 / 13;
-	height: 100vh;
+	    grid-column: 3 / 13;
+	    height: 100vh;
     border-block-end: #606060;
-	border-spacing: 5px;
+	    border-spacing: 5px;
 
 }
   
@@ -157,6 +158,7 @@ p{
     bottom: 0;
     background-size: cover;
     flex-direction: column;
+    background-position: center center;
 }
   
 .fleche-gauche,
